# beeves

./: .gitignore  Cargo.toml  README.md  vercel.json
crates/app_core/: Cargo.toml
crates/app_core/examples/: demo.rs
crates/app_core/src/: bezier.rs  blend.rs  brush.rs  commands.rs  document.rs  fitting.rs  gaussian_blend.rs  ids.rs  lib.rs  math.rs  selection.rs  serialization.rs  solver.rs  splat.rs  stroke.rs
crates/app_core/tests/: fitting.rs  sync.rs
crates/app_wasm/: Cargo.toml
crates/app_wasm/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/shaders/: blit.wgsl  convex_coverage_accum.wgsl  convex_splat.wgsl  coverage_accum.wgsl  coverage_resolve.wgsl  picking.wgsl  splat.wgsl  triangle_coverage_accum.wgsl  triangle_splat.wgsl  vector.wgsl  vector_blend.wgsl  vector_blend_resolve.wgsl
crates/renderer/src/: buffers.rs  camera.rs  convex.rs  coverage.rs  gpu.rs  lib.rs  picking.rs  pipelines.rs  scene.rs  triangle.rs  vector.rs  vector_blend.rs
crates/renderer/tests/: _dump.rs  convex.rs  crisp.rs  picking.rs  render.rs  triangle.rs  vector.rs  vector_blend.rs
examples/: demo.gspf.json
scripts/: vercel-build.sh
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  wasm.ts
web/src/tools/: handles.ts  toolbar.ts
